--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d my_portfolio"
+    "deploy": "gh-pages -d myportfolio_lucas"
   },
   "author": "",
   "license": "ISC",
